--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-# JPA Hibernate Logger? ??? ??(?? ???? ??) / show-sql?? ? ? ?? ???? DEBUG ??
 logging.level.org.hibernate.SQL=DEBUG
-# JPA? ???? Hibernate? ????? ??? SQL? ???? ????.
 spring.jpa.properties.hibernate.format_sql=true
-# SQL ??? ?? ?? ??
 spring.jpa.properties.hibernate.highlight_sql=true
-# SQL ????? ??? ? ? ?? ??
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:db;MODE=MYSQL;
+spring.datasource.username=sa
+spring.datasource.password=
